days 4 - finalizes user n service swagger doc endpoints
